[gd_scene load_steps=158 format=2]

[ext_resource path="res://data/image/char/angry/angry_30.png" type="Texture" id=1]
[ext_resource path="res://data/image/char/stupid/512(3)_16.png" type="Texture" id=2]
[ext_resource path="res://data/image/char/stupid/512(3)_19.png" type="Texture" id=3]
[ext_resource path="res://data/image/char/stupid/512(3)_38.png" type="Texture" id=4]
[ext_resource path="res://data/image/char/stupid/512(3)_30.png" type="Texture" id=5]
[ext_resource path="res://data/image/char/angry/angry_27.png" type="Texture" id=6]
[ext_resource path="res://data/image/char/angry/angry_10.png" type="Texture" id=7]
[ext_resource path="res://data/image/char/stupid/512(3)_35.png" type="Texture" id=8]
[ext_resource path="res://data/image/char/stupid/512(3)_44.png" type="Texture" id=9]
[ext_resource path="res://data/image/char/stupid/512(3)_39.png" type="Texture" id=10]
[ext_resource path="res://data/image/char/stupid/512(3)_21.png" type="Texture" id=11]
[ext_resource path="res://data/image/char/angry/angry_23.png" type="Texture" id=12]
[ext_resource path="res://data/image/char/stupid/512(3)_3.png" type="Texture" id=13]
[ext_resource path="res://data/image/char/stupid/512(3)_11.png" type="Texture" id=14]
[ext_resource path="res://data/image/char/stupid/512(3)_52.png" type="Texture" id=15]
[ext_resource path="res://data/image/char/angry/angry_17.png" type="Texture" id=16]
[ext_resource path="res://data/image/char/stupid/512(3)_37.png" type="Texture" id=17]
[ext_resource path="res://data/image/char/stupid/512(3)_53.png" type="Texture" id=18]
[ext_resource path="res://data/image/char/stupid/512(3)_51.png" type="Texture" id=19]
[ext_resource path="res://data/image/char/stupid/512(3)_49.png" type="Texture" id=20]
[ext_resource path="res://data/image/char/angry/angry_24.png" type="Texture" id=21]
[ext_resource path="res://data/image/char/stupid/512(3)_25.png" type="Texture" id=22]
[ext_resource path="res://data/image/char/stupid/512(3)_31.png" type="Texture" id=23]
[ext_resource path="res://data/image/char/stupid/512(3)_0.png" type="Texture" id=24]
[ext_resource path="res://data/image/char/stupid/512(3)_15.png" type="Texture" id=25]
[ext_resource path="res://data/image/char/angry/angry_18.png" type="Texture" id=26]
[ext_resource path="res://data/image/char/angry/angry_36.png" type="Texture" id=27]
[ext_resource path="res://data/image/char/stupid/512(3)_5.png" type="Texture" id=28]
[ext_resource path="res://data/image/char/stupid/512(3)_14.png" type="Texture" id=29]
[ext_resource path="res://data/image/char/stupid/512(3)_7.png" type="Texture" id=30]
[ext_resource path="res://data/image/char/stupid/512(3)_45.png" type="Texture" id=31]
[ext_resource path="res://data/image/char/stupid/512(3)_23.png" type="Texture" id=32]
[ext_resource path="res://data/image/char/stupid/512(3)_46.png" type="Texture" id=33]
[ext_resource path="res://data/image/char/stupid/512(3)_24.png" type="Texture" id=34]
[ext_resource path="res://data/image/char/stupid/512(3)_36.png" type="Texture" id=35]
[ext_resource path="res://data/image/char/stupid/512(3)_6.png" type="Texture" id=36]
[ext_resource path="res://data/image/char/angry/angry_39.png" type="Texture" id=37]
[ext_resource path="res://data/image/char/stupid/512(3)_18.png" type="Texture" id=38]
[ext_resource path="res://data/image/char/stupid/512(3)_28.png" type="Texture" id=39]
[ext_resource path="res://data/image/char/stupid/512(3)_33.png" type="Texture" id=40]
[ext_resource path="res://data/image/char/stupid/512(3)_20.png" type="Texture" id=41]
[ext_resource path="res://data/image/char/angry/angry_20.png" type="Texture" id=42]
[ext_resource path="res://data/image/char/stupid/512(3)_13.png" type="Texture" id=43]
[ext_resource path="res://data/image/char/stupid/512(3)_10.png" type="Texture" id=44]
[ext_resource path="res://data/image/char/angry/angry_13.png" type="Texture" id=45]
[ext_resource path="res://data/image/char/angry/angry_16.png" type="Texture" id=46]
[ext_resource path="res://data/image/char/stupid/512(3)_26.png" type="Texture" id=47]
[ext_resource path="res://data/image/char/stupid/512(3)_4.png" type="Texture" id=48]
[ext_resource path="res://data/image/char/stupid/512(3)_47.png" type="Texture" id=49]
[ext_resource path="res://data/image/char/angry/angry_34.png" type="Texture" id=50]
[ext_resource path="res://data/image/char/stupid/512(3)_42.png" type="Texture" id=51]
[ext_resource path="res://data/image/char/stupid/512(3)_50.png" type="Texture" id=52]
[ext_resource path="res://data/image/char/angry/angry_38.png" type="Texture" id=53]
[ext_resource path="res://data/image/char/stupid/512(3)_54.png" type="Texture" id=54]
[ext_resource path="res://data/image/char/stupid/512(3)_2.png" type="Texture" id=55]
[ext_resource path="res://data/image/char/stupid/512(3)_17.png" type="Texture" id=56]
[ext_resource path="res://data/image/char/stupid/512(3)_34.png" type="Texture" id=57]
[ext_resource path="res://data/image/char/stupid/512(3)_9.png" type="Texture" id=58]
[ext_resource path="res://data/image/char/stupid/512(3)_1.png" type="Texture" id=59]
[ext_resource path="res://data/image/char/stupid/512(3)_12.png" type="Texture" id=60]
[ext_resource path="res://data/image/char/stupid/512(3)_22.png" type="Texture" id=61]
[ext_resource path="res://data/image/char/stupid/512(3)_48.png" type="Texture" id=62]
[ext_resource path="res://data/image/char/stupid/512(3)_29.png" type="Texture" id=63]
[ext_resource path="res://data/image/char/stupid/512(3)_32.png" type="Texture" id=64]
[ext_resource path="res://data/image/char/stupid/512(3)_43.png" type="Texture" id=65]
[ext_resource path="res://data/image/char/stupid/512(3)_8.png" type="Texture" id=66]
[ext_resource path="res://data/image/char/stupid/512(3)_40.png" type="Texture" id=67]
[ext_resource path="res://data/image/char/stupid/512(3)_27.png" type="Texture" id=68]
[ext_resource path="res://data/image/char/angry/angry_6.png" type="Texture" id=69]
[ext_resource path="res://data/image/char/angry/angry_5.png" type="Texture" id=70]
[ext_resource path="res://data/image/char/angry/angry_4.png" type="Texture" id=71]
[ext_resource path="res://data/image/char/angry/angry_3.png" type="Texture" id=72]
[ext_resource path="res://data/image/char/angry/angry_7.png" type="Texture" id=73]
[ext_resource path="res://data/image/char/stupid/512(3)_41.png" type="Texture" id=74]
[ext_resource path="res://data/image/char/angry/angry_8.png" type="Texture" id=75]
[ext_resource path="res://data/image/char/angry/angry_1.png" type="Texture" id=76]
[ext_resource path="res://data/image/char/angry/angry_0.png" type="Texture" id=77]
[ext_resource path="res://data/image/char/angry/angry_2.png" type="Texture" id=78]
[ext_resource path="res://data/image/char/angry/angry_9.png" type="Texture" id=79]
[ext_resource path="res://script/MainScene.gd" type="Script" id=80]
[ext_resource path="res://data/image/char/angry/angry_28.png" type="Texture" id=81]
[ext_resource path="res://data/image/char/angry/angry_40.png" type="Texture" id=82]
[ext_resource path="res://theme/scoreLabel.tres" type="Theme" id=83]
[ext_resource path="res://data/image/char/angry/angry_35.png" type="Texture" id=84]
[ext_resource path="res://theme/mainButton.tres" type="Theme" id=85]
[ext_resource path="res://data/music/MusMus-BGM-057.mp3" type="AudioStream" id=86]
[ext_resource path="res://data/audio/click4.ogg" type="AudioStream" id=87]
[ext_resource path="res://data/image/char/hot/512(4)_41.png" type="Texture" id=88]
[ext_resource path="res://data/image/char/angry/angry_37.png" type="Texture" id=89]
[ext_resource path="res://font/NotoSansSC-Medium.ttf" type="DynamicFontData" id=90]
[ext_resource path="res://data/image/char/angry/angry_11.png" type="Texture" id=91]
[ext_resource path="res://data/audio/cheers2.mp3" type="AudioStream" id=92]
[ext_resource path="res://data/image/char/angry/angry_22.png" type="Texture" id=93]
[ext_resource path="res://data/image/ui/about.png" type="Texture" id=94]
[ext_resource path="res://data/image/ui/set.png" type="Texture" id=95]
[ext_resource path="res://theme/slider.tres" type="Theme" id=96]
[ext_resource path="res://data/image/char/angry/angry_15.png" type="Texture" id=120]
[ext_resource path="res://data/image/char/angry/angry_21.png" type="Texture" id=121]
[ext_resource path="res://data/image/char/angry/angry_32.png" type="Texture" id=126]
[ext_resource path="res://data/image/char/angry/angry_12.png" type="Texture" id=127]
[ext_resource path="res://data/image/char/angry/angry_33.png" type="Texture" id=128]
[ext_resource path="res://data/image/char/angry/angry_31.png" type="Texture" id=129]
[ext_resource path="res://data/image/char/angry/angry_14.png" type="Texture" id=131]
[ext_resource path="res://data/image/char/angry/angry_26.png" type="Texture" id=132]
[ext_resource path="res://data/image/char/angry/angry_19.png" type="Texture" id=133]
[ext_resource path="res://data/image/char/angry/angry_25.png" type="Texture" id=135]
[ext_resource path="res://data/image/char/angry/angry_29.png" type="Texture" id=136]
[ext_resource path="res://data/image/char/hot/512(4)_14.png" type="Texture" id=145]
[ext_resource path="res://data/image/char/hot/512(4)_19.png" type="Texture" id=146]
[ext_resource path="res://data/image/char/hot/512(4)_22.png" type="Texture" id=147]
[ext_resource path="res://data/image/char/hot/512(4)_24.png" type="Texture" id=148]
[ext_resource path="res://data/image/char/hot/512(4)_25.png" type="Texture" id=153]
[ext_resource path="res://data/image/char/hot/512(4)_21.png" type="Texture" id=157]
[ext_resource path="res://data/image/char/hot/512(4)_3.png" type="Texture" id=159]
[ext_resource path="res://data/image/char/hot/512(4)_5.png" type="Texture" id=162]
[ext_resource path="res://data/image/char/hot/512(4)_7.png" type="Texture" id=166]
[ext_resource path="res://data/image/char/hot/512(4)_9.png" type="Texture" id=167]
[ext_resource path="res://data/image/char/hot/512(4)_12.png" type="Texture" id=168]
[ext_resource path="res://data/image/char/hot/512(4)_13.png" type="Texture" id=169]
[ext_resource path="res://data/image/char/hot/512(4)_17.png" type="Texture" id=170]
[ext_resource path="res://data/image/char/hot/512(4)_18.png" type="Texture" id=172]
[ext_resource path="res://data/image/char/hot/512(4)_16.png" type="Texture" id=174]
[ext_resource path="res://data/image/char/hot/512(4)_20.png" type="Texture" id=177]
[ext_resource path="res://data/image/char/hot/512(4)_23.png" type="Texture" id=178]
[ext_resource path="res://data/image/char/hot/512(4)_0.png" type="Texture" id=179]
[ext_resource path="res://data/image/char/hot/512(4)_8.png" type="Texture" id=181]
[ext_resource path="res://data/image/char/hot/512(4)_26.png" type="Texture" id=182]
[ext_resource path="res://data/image/char/hot/512(4)_15.png" type="Texture" id=183]
[ext_resource path="res://data/image/char/hot/512(4)_27.png" type="Texture" id=184]
[ext_resource path="res://data/image/playGround.jpg" type="Texture" id=185]
[ext_resource path="res://data/image/char/hot/512(4)_1.png" type="Texture" id=186]
[ext_resource path="res://data/image/char/hot/512(4)_11.png" type="Texture" id=187]
[ext_resource path="res://data/image/char/hot/512(4)_2.png" type="Texture" id=189]
[ext_resource path="res://data/image/char/hot/512(4)_6.png" type="Texture" id=192]
[ext_resource path="res://data/image/char/hot/512(4)_4.png" type="Texture" id=207]
[ext_resource path="res://data/image/char/hot/512(4)_10.png" type="Texture" id=208]
[ext_resource path="res://data/image/char/hot/512(4)_32.png" type="Texture" id=209]
[ext_resource path="res://data/image/char/hot/512(4)_35.png" type="Texture" id=210]
[ext_resource path="res://data/image/char/hot/512(4)_37.png" type="Texture" id=211]
[ext_resource path="res://data/image/char/hot/512(4)_31.png" type="Texture" id=212]
[ext_resource path="res://data/image/char/hot/512(4)_28.png" type="Texture" id=213]
[ext_resource path="res://data/image/char/hot/512(4)_38.png" type="Texture" id=214]
[ext_resource path="res://data/image/char/hot/512(4)_39.png" type="Texture" id=215]
[ext_resource path="res://data/image/char/hot/512(4)_40.png" type="Texture" id=216]
[ext_resource path="res://data/image/char/hot/512(4)_29.png" type="Texture" id=217]
[ext_resource path="res://data/image/char/hot/512(4)_34.png" type="Texture" id=218]
[ext_resource path="res://data/image/char/hot/512(4)_33.png" type="Texture" id=219]
[ext_resource path="res://data/image/char/hot/512(4)_30.png" type="Texture" id=220]
[ext_resource path="res://data/image/char/hot/512(4)_36.png" type="Texture" id=221]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 179 ), ExtResource( 186 ), ExtResource( 189 ), ExtResource( 159 ), ExtResource( 207 ), ExtResource( 162 ), ExtResource( 192 ), ExtResource( 166 ), ExtResource( 181 ), ExtResource( 167 ), ExtResource( 208 ), ExtResource( 187 ), ExtResource( 168 ), ExtResource( 169 ), ExtResource( 145 ), ExtResource( 183 ), ExtResource( 174 ), ExtResource( 170 ), ExtResource( 172 ), ExtResource( 146 ), ExtResource( 177 ), ExtResource( 157 ), ExtResource( 147 ), ExtResource( 178 ), ExtResource( 148 ), ExtResource( 153 ), ExtResource( 182 ), ExtResource( 184 ), ExtResource( 213 ), ExtResource( 217 ), ExtResource( 220 ), ExtResource( 212 ), ExtResource( 209 ), ExtResource( 219 ), ExtResource( 218 ), ExtResource( 210 ), ExtResource( 221 ), ExtResource( 211 ), ExtResource( 214 ), ExtResource( 215 ), ExtResource( 216 ), ExtResource( 88 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 59 ), ExtResource( 55 ), ExtResource( 13 ), ExtResource( 48 ), ExtResource( 28 ), ExtResource( 36 ), ExtResource( 30 ), ExtResource( 66 ), ExtResource( 58 ), ExtResource( 44 ), ExtResource( 14 ), ExtResource( 60 ), ExtResource( 43 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 2 ), ExtResource( 56 ), ExtResource( 38 ), ExtResource( 3 ), ExtResource( 41 ), ExtResource( 11 ), ExtResource( 61 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 22 ), ExtResource( 47 ), ExtResource( 68 ), ExtResource( 39 ), ExtResource( 63 ), ExtResource( 5 ), ExtResource( 23 ), ExtResource( 64 ), ExtResource( 40 ), ExtResource( 57 ), ExtResource( 8 ), ExtResource( 35 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 67 ), ExtResource( 74 ), ExtResource( 51 ), ExtResource( 65 ), ExtResource( 9 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 49 ), ExtResource( 62 ), ExtResource( 20 ), ExtResource( 52 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 54 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 77 ), ExtResource( 76 ), ExtResource( 78 ), ExtResource( 72 ), ExtResource( 71 ), ExtResource( 70 ), ExtResource( 69 ), ExtResource( 73 ), ExtResource( 75 ), ExtResource( 79 ), ExtResource( 7 ), ExtResource( 91 ), ExtResource( 127 ), ExtResource( 45 ), ExtResource( 131 ), ExtResource( 120 ), ExtResource( 46 ), ExtResource( 16 ), ExtResource( 26 ), ExtResource( 133 ), ExtResource( 42 ), ExtResource( 121 ), ExtResource( 93 ), ExtResource( 12 ), ExtResource( 21 ), ExtResource( 135 ), ExtResource( 132 ), ExtResource( 6 ), ExtResource( 81 ), ExtResource( 136 ), ExtResource( 1 ), ExtResource( 129 ), ExtResource( 126 ), ExtResource( 128 ), ExtResource( 50 ), ExtResource( 84 ), ExtResource( 27 ), ExtResource( 89 ), ExtResource( 53 ), ExtResource( 37 ), ExtResource( 82 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 90 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.4, 0.745098, 0.662745, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id=11]
Button/fonts/font = SubResource( 9 )
Button/styles/disabled = SubResource( 10 )
Button/styles/focus = SubResource( 10 )
Button/styles/hover = SubResource( 10 )
Button/styles/normal = SubResource( 10 )
Button/styles/pressed = SubResource( 10 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.176471, 0.815686, 0.27451, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.188235, 0.411765, 0.239216, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id=13]
Panel/styles/panel = SubResource( 12 )

[node name="main" type="Node"]
script = ExtResource( 80 )

[node name="backGround" type="Sprite" parent="."]
modulate = Color( 0.858824, 0.819608, 0.819608, 1 )
position = Vector2( 512, 301 )
texture = ExtResource( 185 )

[node name="hot" type="AnimatedSprite" parent="."]
position = Vector2( 1112, 272 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
frame = 33
playing = true

[node name="stupid" type="AnimatedSprite" parent="."]
position = Vector2( 1104, 160 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 4 )
frame = 36
playing = true

[node name="angry" type="AnimatedSprite" parent="."]
position = Vector2( 1104, 56 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 6 )
frame = 40
playing = true

[node name="Tween" type="Tween" parent="."]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 83 )
text = "黄豆人运动会"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -183.0
margin_top = -491.0
margin_right = 183.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 25
alignment = 1

[node name="start" type="Button" parent="Control/VBoxContainer"]
margin_top = 34.0
margin_right = 366.0
margin_bottom = 158.0
theme = ExtResource( 85 )
text = "单人模式"

[node name="continue" type="Button" parent="Control/VBoxContainer"]
margin_top = 183.0
margin_right = 366.0
margin_bottom = 307.0
theme = ExtResource( 85 )
text = "多人模式"

[node name="Score" type="Button" parent="Control/VBoxContainer"]
margin_top = 332.0
margin_right = 366.0
margin_bottom = 456.0
theme = ExtResource( 85 )
text = "最高分"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -222.5
margin_right = 132.0
margin_bottom = 264.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="punch" type="Label" parent="Control/VBoxContainer2"]
margin_right = 264.0
margin_bottom = 117.0
grow_horizontal = 2
theme = ExtResource( 83 )

[node name="run" type="Label" parent="Control/VBoxContainer2"]
margin_top = 121.0
margin_right = 264.0
margin_bottom = 238.0
grow_horizontal = 2
theme = ExtResource( 83 )

[node name="pingpong" type="Label" parent="Control/VBoxContainer2"]
margin_top = 242.0
margin_right = 264.0
margin_bottom = 359.0
grow_horizontal = 2
theme = ExtResource( 83 )

[node name="score" type="Button" parent="Control/VBoxContainer2"]
margin_top = 363.0
margin_right = 264.0
margin_bottom = 487.0
theme = ExtResource( 85 )
text = "返回"

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 86 )
autoplay = true

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 87 )
volume_db = 10.0

[node name="cheer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 92 )
volume_db = -12.0
autoplay = true

[node name="Button" type="Button" parent="."]
margin_left = 16.0
margin_top = 408.0
margin_right = 168.0
margin_bottom = 560.0
theme = SubResource( 11 )
text = "language"

[node name="setting" type="TextureButton" parent="."]
margin_left = 25.0
margin_top = 23.0
margin_right = 105.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 39, 41 )
texture_normal = ExtResource( 95 )
texture_pressed = ExtResource( 95 )
texture_hover = ExtResource( 95 )
texture_disabled = ExtResource( 95 )
texture_focused = ExtResource( 95 )
expand = true

[node name="about" type="TextureButton" parent="."]
margin_left = 129.0
margin_top = 23.0
margin_right = 209.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 39, 41 )
texture_normal = ExtResource( 94 )
texture_pressed = ExtResource( 94 )
texture_hover = ExtResource( 94 )
texture_disabled = ExtResource( 94 )
texture_focused = ExtResource( 94 )
expand = true

[node name="Control2" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -200.0
margin_right = 19.9999
margin_bottom = -160.0

[node name="Panel" type="Panel" parent="Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -158.0
margin_right = 300.0
margin_bottom = 442.0
theme = SubResource( 13 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control2"]
margin_right = 40.0
margin_bottom = 40.0
grow_horizontal = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control2/VBoxContainer"]
margin_right = 422.0
margin_bottom = 117.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="Control2/VBoxContainer/HBoxContainer2"]
margin_left = 4.0
margin_right = 164.0
margin_bottom = 117.0
theme = ExtResource( 83 )
text = "音量"

[node name="HSlider" type="HSlider" parent="Control2/VBoxContainer/HBoxContainer2"]
margin_left = 168.0
margin_right = 418.0
margin_bottom = 90.0
rect_min_size = Vector2( 250, 0 )
theme = ExtResource( 96 )
step = 0.2
value = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/VBoxContainer"]
margin_top = 121.0
margin_right = 422.0
margin_bottom = 245.0
grow_horizontal = 2
custom_constants/separation = 106
alignment = 1

[node name="full" type="Button" parent="Control2/VBoxContainer/HBoxContainer"]
margin_right = 158.0
margin_bottom = 124.0
theme = ExtResource( 85 )
text = "全屏"

[node name="window" type="Button" parent="Control2/VBoxContainer/HBoxContainer"]
margin_left = 264.0
margin_right = 422.0
margin_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 85 )
text = "窗口"

[node name="return" type="Button" parent="Control2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.0
margin_top = 227.0
margin_right = 79.0
margin_bottom = 351.0
grow_horizontal = 2
theme = ExtResource( 85 )
text = "返回"

[connection signal="pressed" from="Control/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Score" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="about" to="." method="_on_about_pressed"]
[connection signal="value_changed" from="Control2/VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Control2/VBoxContainer/HBoxContainer/full" to="." method="_on_full_pressed"]
[connection signal="pressed" from="Control2/VBoxContainer/HBoxContainer/window" to="." method="_on_window_pressed"]
[connection signal="pressed" from="Control2/return" to="." method="_on_return_pressed"]
